plugins {
    id 'java-library'
    id 'eclipse'
    id 'maven-publish'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

group = 'kekolab'
version = '1.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

dependencies {
    implementation group: 'org.jboss.resteasy', name: 'resteasy-client', version: '6.0.0.Final'
    implementation group: 'org.jboss.resteasy', name: 'resteasy-jaxb-provider', version: '6.0.0.Final'
    implementation 'org.slf4j:slf4j-api:1.7.36'
    testImplementation 'org.slf4j:slf4j-simple:1.7.36'    
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.2'   
}

task sourceJar(type: Jar) {
  from sourceSets.main.allJava
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/kekolab/libplex")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
            }
        }
    }    
    publications {
        gpr(MavenPublication) {
            from(components.java)
            artifact sourceJar {
	            classifier "sources"
	        }
        }
    }
}
